--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ venv/
 
 # 데이터셋으로 시작하는 모든 폴더 무시
 dataset_*/
+
+# --- 새로 추가할 내용 ---
+# 라이센스 플레이트 데이터셋 폴더
+license_plate_dataset/
+
+# YOLO 학습 결과 로그 폴더
+runs/
+
+# 특정 zip 파일 무시 (모든 zip을 무시하려면 *.zip)
+license_plate.v2i.yolov8.zip
